[package]
name = "accd_gui"
version = "0.1.0"
authors = ["ZioYuri78 <yuribelleri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = {version = "1.0.2", features = ["textbox", "notice", "tabs"]}
native-windows-derive = "1.0.0"
accd_core = {path = "../accd_core"}



